cluster-rpi4/components/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.rpi4-1
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: argocd-server
              port:
                name: https
#argocd(/|$)(.*)
